--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,18 +29,21 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.6
+  dio: ^5.7.0
   dropdown_button2: ^2.3.9
   flutter:
     sdk: flutter
   flutter_calendar_carousel: ^2.4.4
+  flutter_dotenv: ^5.2.1
   flutter_holo_date_picker: ^2.0.0
+  logger: ^2.4.0
   gap: ^3.0.1
   provider: ^6.1.2
   responsive_builder: ^0.7.1
+  shared_preferences: ^2.3.2
   swipe_refresh: ^1.1.2
 
 dev_dependencies:
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
